--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -257,7 +257,7 @@
         list.push("P1-Villa-76,Surya Nagal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-77,Devki Nandan Mathuriya,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-78,Akshat Mangal,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-79,Rahul Peswani,-9000,2000,,,,,,,,"); 
+        list.push("P1-Villa-79,Rahul Peswani,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-80,Rahul Peswani,-11000,,,,,,,,,"); 
         list.push("P1-Villa-81,Mamta Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-82,Swati Bansal,0,2000,3000,3000,3000,3000,3000,,,"); 
