--- a/MemberShip.html
+++ b/MemberShip.html
@@ -226,7 +226,7 @@ list.push("P1-Villa-01,Pooja Sharma,Pending");
         list.push("P1-Villa-84,Tarun Sharda,Pending"); 
         list.push("P1-Villa-85,Pradeep Verma,Pending"); 
         list.push("P1-Villa-86,Surendra Agrawal,Partially"); 
-        list.push("P1-Villa-87,Devendra Singh,Pending"); 
+        list.push("P1-Villa-87,Devendra Singh,Partially"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,Done"); 
         list.push("P1-Villa-89,Khem Chand Nagal,Pending"); 
         list.push("P1-Villa-90,Vivek Dubey,Pending"); 
