--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -186,7 +186,7 @@
         list.push("P1-Villa-06,Hemant Kumar,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-07,Rahul Pandey,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-08,Anil Sharma,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-09,Raghvendra Sharma,-5000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-09,Raghvendra Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-10,Jogendra Sachdeva,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-11,Sundeep Mahala,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,,,,,"); 
@@ -213,7 +213,7 @@
         list.push("P1-Villa-33,Prakash Joshi,-5000,2000,2000,2000,,,,,,");
         list.push("P1-Villa-34,Vijay Meena,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-36,Harish Kumar Yadav,-3000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-36,Harish Kumar Yadav,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-38,ManishaSingh,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,3000,,,,,"); 
@@ -265,7 +265,7 @@
         list.push("P1-Villa-84,Tarun Sharda,-11000,,,,,,,,,"); 
         list.push("P1-Villa-85,Pradeep Verma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-86,Surendra Agrawal,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-87,Devendra Singh,-5000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-87,Devendra Singh,-300,2000,3000,3000,2700,,,,,"); 
         list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-89,Khem Chand Nagal,-11000,,,,,,,,,"); 
         list.push("P1-Villa-90,Vivek Dubey,-11000,,,,,,,,,"); 
