--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -199,7 +199,7 @@
         list.push("P1-Villa-19,Hitesh Sain,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,-2000,2000,3000,3000,1000,,,,,"); 
         list.push("P1-Villa-21,Dariya Singh,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-22,Shivani sanjeev sharma,-5000,2000,3000,1000,,,,,,");
+        list.push("P1-Villa-22,Shivani sanjeev sharma,0,2000,3000,3000,3000,,,,,");
         list.push("P1-Villa-23,Akshay Saraswat,0,0,0,0,,,,,,");  
         list.push("P1-Villa-24,Abhimanyu Saraswat,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-25,Pooja Khandelwal,-11000,,,,,,,,,"); 
