--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -250,7 +250,7 @@
         list.push("P1-Villa-69,Piyush Sharma,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-70,Vineet Mahera,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-71,Suresh kumar Sharma,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-72,Nikesh Chaudhary,-5000,2000,2000,2000,,,,,,"); 
+        list.push("P1-Villa-72,Nikesh Chaudhary,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-73,Richa Sharma,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-74,Kanchan Anand,-11000,,,,,,,,,"); 
         list.push("P1-Villa-75,Archna Goswami,0,2000,3000,3000,3000,,,,,"); 
