--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
    	   
    <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
 	
-	<p> Society receipt book is printed, please everyone collect payment receipt from treasury in upcoming meeting. </p>
+	<p> Society receipt book is printed, please everyone collect payment receipt from treasury. </p>
 </marquee>
-
+<!--
 <img class="NO-CACHE" data-src="img/Recipt.png" width="350px" heigt="250px" alt="" style="margin-bottom: 22px;">
 
-<!--
+
 <img class="NO-CACHE" data-src="img/Election.jpg" width="405px" heigt="350px" alt="" style="margin-bottom: 22px;">
 -->
 <a href="MemberShip.html"> <img  src="img/MS.png" width="300px" heigt="100px" alt="" style="margin-bottom: 22px;"> </a>
