--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -186,7 +186,7 @@
         list.push("P1-Villa-06,Hemant Kumar,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-07,Rahul Pandey,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-08,Anil Sharma,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-09,Raghvendra Sharma,0,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-09,Raghvendra Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-10,Jogendra Sachdeva,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-11,Sundeep Mahala,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,,,,,"); 
