--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 <a href="MemberShip.html"> <img  src="img/MS.png" width="300px" heigt="100px" alt="" style="margin-bottom: 22px;"> </a>
 
 <img class="NO-CACHE" data-src="img/SVCert.png" width="250px" heigt="250px" alt="" style="margin-bottom: 22px;">
-<!--
+
 <img class="NO-CACHE" data-src="img/SM.png" width="405px" heigt="550px" alt="" style="margin-bottom: 22px;">
--->
+
 
     <!--
    <marquee behavior="slide" direction="left">
@@ -322,7 +322,7 @@
 							<h2>
 								<a href="#"> Shubh Villa Club House Booking Status </a>
 							</h2>
-							<p style="color: rgb(7, 23, 144)"> Booked - 21 july 2024, Morning 9 AM to 6:00 PM </p> 
+							<p style="color: rgb(7, 23, 144)"> Booked - 04 August 2024, Morning 10 AM to 2:00 PM (Phase-1 General Meeting) </p> 
 
 						</div>
 
@@ -347,9 +347,9 @@
 							<h2>
 								<a href="#">Meeting & Update</a>
 							</h2>
-							<p style="color: rgb(7, 23, 144)">Next Planned Meeting at Club House on 3rd March 2024, Sunday at 10 AM.</p> 
+							<p style="color: rgb(7, 23, 144)">Next Planned Meeting at Club House on 4th August 2024, Sunday at 11:15 AM.</p> 
 
-							<p style="color: rgb(4, 80, 24)">As per last meeting decided, socity meeting on every 4th Sunday at 10 AM.</p> 
+							<p style="color: rgb(4, 80, 24)">As per decided in meeting , socity meeting on every 4th Sunday at 10 AM.</p> 
 							<!--<p style="color: red">Next Meeting date not decided yet.</p> -->
 							<!--<p style="color: rgb(6, 151, 38)">A fortnightly meeting (once every two weeks) between villa owners on Saturday evening or Sunday morning. </p>
 							
