--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -180,7 +180,7 @@
       function getYear2024(){
      var list = [];
 
-     list.push("P1-Villa-01,Pooja Sharma,0,2000,3000,3000,3000,,,,,,"); 
+     list.push("P1-Villa-01,Pooja Sharma,0,2000,3000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-04,Bhupesh Saini,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-05,Shishir Maltiyar,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-06,Hemant Kumar,-5000,2000,2000,2000,,,,,,"); 
@@ -205,18 +205,18 @@
         list.push("P1-Villa-25,Pooja Khandelwal,-11000,,,,,,,,,"); 
         list.push("P1-Villa-26,Rakesh Kumar,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-27,Murari Sharma,-3000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-28,Mohit Juneja,0,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-28,Mohit Juneja,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-29,Lokshita Mathur,0,0,0,0,,,,,,"); 
         list.push("P1-Villa-30,Peeyush Mathur,0,0,0,0,,,,,,");   
         list.push("P1-Villa-31,Mahesh Taparia,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-32,Peeyush Verma,-2000,2000,3000,3000,1000,,,,,"); 
         list.push("P1-Villa-33,Prakash Joshi,-5000,2000,2000,2000,,,,,,");
-        list.push("P1-Villa-34,Vijay Meena,0,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-34,Vijay Meena,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-38,ManishaSingh,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,0,0,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-42,Prakash Gaur,0,2000,3000,3000,3000,3000,3000,,,"); 
@@ -229,20 +229,20 @@
         list.push("P1-Villa-49,Sunita Verma,-5000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-50,Abhishek Garg,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-51,Jatin Kumar,-5000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-52,Shailesh Bansal,0,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-52,Shailesh Bansal,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-53,Rohit Jain,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-54,Vinod Kumar Garg,0,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-55,Raj Kamal,0,2000,3000,3000,3000,3000,3000,,,"); 
+        list.push("P1-Villa-55,Raj Kamal,0,2000,3000,3000,3000,3000,3000,3000,,"); 
         list.push("P1-Villa-56_57A,Kajor Mal Goyal,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-58_57B,Deepak Swaroop Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-59,Pawan Jaiman,0,0,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-59,Pawan Jaiman,0,0,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-60,Santra Devi,-11000,,,,,,,,,"); 
         list.push("P1-Villa-61,Divanshi Dhanjani,0,2000,3000,3000,3000,,,,,"); 
 
 
         list.push("P1-Villa-62,Lal Singh,-11000,,,,,,,,,"); 
         list.push("P1-Villa-63,Yogesh Ji,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-64,Sahil Meghnani, -3000,2000,3000,3000,,,,,,");
+        list.push("P1-Villa-64,Sahil Meghnani, -3000,2000,3000,3000,3000,,,,,");
         list.push("P1-Villa-65,Jalaj Rajpurohit,0,2000,3000,3000,3000,,,,,");
         list.push("P1-Villa-66,Manju Gehlot,-3000,2000,3000,3000,,,,,,");
         list.push("P1-Villa-67,Abhishek Jaiman,0,2000,3000,3000,3000,,,,,"); 
@@ -275,16 +275,16 @@
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,-11000,,,,,,,,,"); 
         list.push("P1-Villa-95,Naresh Mathur,0,0,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-96,George Pal Singh,0,2000,3000,3000,3000,,,,,");
-        list.push("P1-Villa-97,Surendra Kumawat,0,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-97,Surendra Kumawat,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,-3000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-99,Sakshi Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-102,Pratima Singh,0,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-102,Pratima Singh,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-103,Ritika,-11000,,,,,,,,,"); 
-        list.push("P1-Villa-104,Rajender Singh,0,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-104,Rajender Singh,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-105,Kedar Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
-        list.push("P1-Villa-106,Vandana Soni,0,0,0,3000,3000,,,,,"); 
+        list.push("P1-Villa-106,Vandana Soni,0,0,0,3000,3000,3000,,,,"); 
         list.push("P1-Villa-107,Rita Soni,0,0,0,3000,3000,,,,,"); 
         list.push("P1-Villa-108,Shanky Munjal,0,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-109,Satish Kumar,-11000,,,,,,,,,"); 
