--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -214,7 +214,7 @@
         list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-36,Harish Kumar Yadav,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-37,Gajendra Sharma,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-38,ManishaSingh,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-38,ManishaSingh,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-39,Manish Salvi,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-40,Anita Kanwar,-3000,0,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-41,Monika Mittal,-8000,2000,2000,2000,,,,,,"); 
