--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -208,7 +208,7 @@
         list.push("P1-Villa-29,Lokshita Mathur,0,0,0,0,,,,,,"); 
         list.push("P1-Villa-30,Peeyush Mathur,0,0,0,0,,,,,,");   
         list.push("P1-Villa-31,Mahesh Taparia,-3000,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-32,Peeyush Verma,-5000,2000,3000,3000,1000,,,,,"); 
+        list.push("P1-Villa-32,Peeyush Verma,-2000,2000,3000,3000,3000,1000,,,,"); 
         list.push("P1-Villa-33,Prakash Joshi,-8000,2000,2000,2000,,,,,,");
         list.push("P1-Villa-34,Vijay Meena,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-35,D V Saraswat,0,2000,3000,3000,3000,3000,,,,"); 
@@ -265,7 +265,7 @@
         list.push("P1-Villa-85,Pradeep Verma,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-86,Surendra Agrawal,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-87,Devendra Singh,-3300,2000,3000,3000,2700,,,,,"); 
-        list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-88,Pankaj Chauhan & Pushpa Tomar,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-89,Khem Chand Nagal,-14000,,,,,,,,,"); 
         list.push("P1-Villa-90,Vivek Dubey,-14000,,,,,,,,,"); 
         list.push("P1-Villa-91,Rajendra Prasad Gupta,-14000,,,,,,,,,"); 
