--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
 	
 	<p> Society receipt book is printed, please everyone collect payment receipt from treasury. </p>
 </marquee>
+
+
+<marquee  scrollamount="5" style= "color:rgb(216, 21, 132) ; font-size:20px" height="30px" > 
+	
+	<p> शुभ विला मंदिर में दिनाँक 11.08.2024 रविवार को सामुहिक रूप से रुद्राभिषेक (सहस्त्र घट) पूजा कार्य हेतु रू 500/-प्रति विला सहयोग राशि तथा 250/- रू प्रति व्यक्ति प्रसादी कूपन आधरित रहेगी. (10 वर्ष से कम आयु के बच्चो के लिए कूपन की आवश्यकता नहीं रहेगी.) </p>
+</marquee>
+
 <!--
 <img class="NO-CACHE" data-src="img/Recipt.png" width="350px" heigt="250px" alt="" style="margin-bottom: 22px;">
 
