--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -222,7 +222,7 @@
         list.push("P1-Villa-43,Arun Tripathi,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-44,Ravindra Verma,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-45,Nand Singh Rajawat,-3000,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-46,Vikas Mahala,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-46,Vikas Mahala,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-47,Manoj Ji,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-48,R C Sharma ,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-49,Sunita Verma,-8000,2000,2000,2000,,,,,,"); 
@@ -242,7 +242,7 @@
         list.push("P1-Villa-62,Lal Singh,-14000,,,,,,,,,"); 
         list.push("P1-Villa-63,Yogesh Ji,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-64,Sahil Meghnani, -3000,2000,3000,3000,3000,,,,,");
-        list.push("P1-Villa-65,Jalaj Rajpurohit,-3000,2000,3000,3000,3000,,,,,");
+        list.push("P1-Villa-65,Jalaj Rajpurohit,0,2000,3000,3000,3000,3000,,,,");
         list.push("P1-Villa-66,Manju Gehlot,-6000,2000,3000,3000,,,,,,");
         list.push("P1-Villa-67,Abhishek Jaiman,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-68,Shrish Jaiman,-3000,2000,3000,3000,3000,,,,,"); 
