--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@
 
 <img class="NO-CACHE" data-src="img/Election.jpg" width="405px" heigt="350px" alt="" style="margin-bottom: 22px;">
 -->
+<img class="NO-CACHE" data-src="img/Aug_24_E.png" width="450px" heigt="650px" alt="" style="margin-bottom: 22px;">
+
 <p  style= "color:rgb(10, 131, 20)"> Sahastra Abhishek collection details. </p>
-<img class="NO-CACHE" data-src="img/Aug_24.png" width="450px" heigt="650px" alt="" style="margin-bottom: 22px;">
+<img class="NO-CACHE" data-src="img/Aug_24_C.png" width="450px" heigt="650px" alt="" style="margin-bottom: 22px;">
 
 <a href="MemberShip.html"> <img  src="img/MS.png" width="300px" heigt="100px" alt="" style="margin-bottom: 22px;"> </a>
 
