--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -196,7 +196,7 @@
         list.push("P1-Villa-17,khushi Khandelwal,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-18,Pooja   Saxena,-6000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-19,Hitesh Sain,-8000,2000,2000,2000,,,,,,"); 
-        list.push("P1-Villa-20,Ved Prakash Parashar,-5000,2000,3000,3000,1000,,,,,"); 
+        list.push("P1-Villa-20,Ved Prakash Parashar,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-21,Dariya Singh,-6000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-22,Shivani sanjeev sharma,-3000,2000,3000,3000,3000,,,,,");
         list.push("P1-Villa-23,Akshay Saraswat,0,0,0,0,,,,,,");  
