--- a/VehicleOwner.html
+++ b/VehicleOwner.html
@@ -133,7 +133,8 @@
      list.push("P1-Villa-10,@Jogendra Sachdeva,@RJ45-CP-8446,@"); 9828080386
      list.push("P1-Villa-12,@Gaurav Kothari,@RJ22-BH-5688C,@"); 9982567222
      list.push("P1-Villa-13,@Anil Sharma,@RJ14-CZ-2936,@"); 9983344889
-     list.push("P1-Villa-19,@Hitesh Sain,@RJ-02-CD-3674,@"); 9650978342
+     list.push("P1-Villa-19,@Hitesh Sain,@RJ02-CD-3674,@"); 9650978342
+     list.push("P1-Villa-20,@Ved Prakash Parashar,@RJ14-ZC-1104,@"); 9462071435
      list.push("P1-Villa-24,@Abhimanyu Saraswat,@RJ01-CC-3068/ RJ01-CE-0919/ RJ14NC4125,@"); 9461594523
      list.push("P1-Villa-26,@Rakesh Kumar,@RJ45-CH-1989,@"); 9079205061
      list.push("P1-Villa-27,@Murari Sharma,@RJ14-CU-6335,@"); 9829192929
