--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -188,7 +188,7 @@
         list.push("P1-Villa-09,Raghvendra Sharma,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-10,Jogendra Sachdeva,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-11,Sundeep Mahala,-3000,2000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-12,Gaurav Kothari,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-12,Gaurav Kothari,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-13,Anil Sharma,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-14,Ayush   Shandilya,-6000,2000,3000,3000,,,,,,"); 
         list.push("P1-Villa-15,Sunil   Kumar,-8000,2000,2000,2000,,,,,,"); 
