--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -180,7 +180,7 @@
      var list = [];
 
      list.push("P1-Villa-01,Pooja Sharma,0,2000,3000,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-04,Bhupesh Saini,-3000,2000,3000,3000,3000,,,,,"); 
+        list.push("P1-Villa-04,Bhupesh Saini,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-05,Shishir Maltiyar,-3000,2000,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-06,Hemant Kumar,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-07,Rahul Pandey,0,2000,3000,3000,3000,3000,,,,"); 
@@ -275,7 +275,7 @@
         list.push("P1-Villa-95,Naresh Mathur,-3000,0,3000,3000,3000,,,,,"); 
         list.push("P1-Villa-96,George Pal Singh,-3000,2000,3000,3000,3000,,,,,");
         list.push("P1-Villa-97,Surendra Kumawat,0,2000,3000,3000,3000,3000,,,,"); 
-        list.push("P1-Villa-98,Hitesh Jain,-6000,2000,3000,3000,,,,,,"); 
+        list.push("P1-Villa-98,Hitesh Jain,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-99,Sakshi Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-100,Akansha Garg,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-101,Laxmi Agarwal,-14000,,,,,,,,,"); 
