--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -198,7 +198,7 @@
         list.push("P1-Villa-19,Hitesh Sain,-8000,2000,2000,2000,,,,,,"); 
         list.push("P1-Villa-20,Ved Prakash Parashar,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-21,Dariya Singh,-6000,2000,3000,3000,,,,,,"); 
-        list.push("P1-Villa-22,Shivani sanjeev sharma,-3000,2000,3000,3000,3000,,,,,");
+        list.push("P1-Villa-22,Shivani sanjeev sharma,0,2000,3000,3000,3000,3000,,,,");
         list.push("P1-Villa-23,Akshay Saraswat,0,0,0,0,,,,,,");  
         list.push("P1-Villa-24,Abhimanyu Saraswat,0,2000,3000,3000,3000,3000,3000,,,"); 
         list.push("P1-Villa-25,Pooja Khandelwal,-14000,,,,,,,,,"); 
@@ -273,7 +273,7 @@
         list.push("P1-Villa-93,Manju Sexena,-14000,,,,,,,,,"); 
         list.push("P1-Villa-94,Rounak Rajendra Bhatt,-14000,,,,,,,,,"); 
         list.push("P1-Villa-95,Naresh Mathur,-3000,0,3000,3000,3000,,,,,"); 
-        list.push("P1-Villa-96,George Pal Singh,-3000,2000,3000,3000,3000,,,,,");
+        list.push("P1-Villa-96,George Pal Singh,0,2000,3000,3000,3000,3000,,,,");
         list.push("P1-Villa-97,Surendra Kumawat,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-98,Hitesh Jain,0,2000,3000,3000,3000,3000,,,,"); 
         list.push("P1-Villa-99,Sakshi Singh,0,2000,3000,3000,3000,3000,3000,,,"); 
